# rp2350-coprocessor

./: CMakeLists.txt  Kconfig
dts/: rp2350-coprocessor.dtsi  rp2350_coprocessor.dtsi
dts/bindings/: rp,rp2350-coprocessor.yaml
include/: picocore1.h  rp2350_coprocessor.h
src/: picocore.c  rp2350_coprocessor.c
zephyr/: module.yml
